fix overflow in convo

--- a/Frontend/nalc/src/Screen/Home/Home.css
+++ b/Frontend/nalc/src/Screen/Home/Home.css
@@ -8,9 +8,8 @@
   
   .chat-input {
     flex: 0.8;
-    padding: 15px;
+    padding: 10px;
     background-color: #ffffff;
-    overflow-y: auto;
   }
   
   .inputForm {
@@ -20,7 +19,6 @@
     transform: translateX(-50%);
     width: 50%;
     padding: 10px;
-    z-index: 999;
   }
 
 .newChatBtn{
@@ -36,9 +34,6 @@
     border: 2px #841818 solid;
 } 
 
-.convo {
-  display: flex;
-}
 
 .convo-message {
   align-items: center;
@@ -51,4 +46,12 @@
 
 .span-text {
   margin-right: 70px;
+}
+
+.convo-message-container {
+  margin-bottom: 85px;
+  max-height: calc(100vh - 85px);
+  overflow-y: auto;
+  width: 1100px;
+  alignItems: center;
 }
